--- a/index.html
+++ b/index.html
@@ -40,12 +40,20 @@
         src="https://console.dialogflow.com/api-client/demo/embedded/0eae969a-8cd8-47d7-a99a-6b5db5c88ae0"
       >
       </iframe> -->
-      <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+      <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
       <df-messenger
         chat-icon="https:&#x2F;&#x2F;m.media-amazon.com&#x2F;images&#x2F;I&#x2F;6154GJfNpvL.png"
         intent="WELCOME"
         chat-title="Michael"
         agent-id="0eae969a-8cd8-47d7-a99a-6b5db5c88ae0"
+        language-code="en"
+      ></df-messenger> -->
+      <script src="https://www.gstatic.com/dialogflow-console/fast/messenger-cx/bootstrap.js?v=1"></script>
+      <df-messenger
+        df-cx="true"
+        location="us-central1"
+        chat-title="Fivsys"
+        agent-id="9c2300b7-1fa2-4213-a7c7-f362c4ca4896"
         language-code="en"
       ></df-messenger>
     </aside>
